// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overrideRequestBodies() should replace UPDATE requestBody with one from CREATE 1`] = `
Object {
  "item": Array [
    Object {
      "item": Array [
        Object {
          "request": Object {
            "body": Object {
              "baz": "{{buzz}}",
              "foo": "bar",
            },
            "method": "POST",
          },
        },
        Object {
          "request": Object {
            "body": Object {
              "baz": "{{buzz}}",
              "foo": "bar",
            },
            "method": "PATCH",
          },
        },
      ],
      "name": "RequestFolder",
    },
  ],
}
`;

exports[`overrideRequestBodies() should return unaltered if there is no update method 1`] = `
Object {
  "item": Array [
    Object {
      "item": Array [
        Object {
          "request": Object {
            "body": Object {
              "baz": "{{buzz}}",
              "foo": "bar",
            },
            "method": "POST",
          },
        },
      ],
      "name": "RequestFolder",
    },
  ],
}
`;
